# znap

./: .gitignore  Cargo.toml  DEPLOY.md  INSTALLATION.md  LICENSE  README.md  TUTORIAL.md  flake.nix  znap.md
.github/workflows/: ci.yml
action/: Cargo.toml
action-api-derive/: Cargo.toml
action-api-derive/src/: lib.rs
action-derive/: Cargo.toml
action-derive/src/: lib.rs
action/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: build.rs  clean.rs  mod.rs  serve.rs
cli/src/template/: api.rs  collection_body.rs  collection_toml.rs  mod.rs  server_toml.rs  toml.rs
cli/src/utils/: mod.rs
collection-attribute/: Cargo.toml
collection-attribute/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
examples/my-actions/: Cargo.toml
examples/my-actions/src/: lib.rs  main.rs
examples/send-donation/: Cargo.toml  README.md  Znap.toml  package.json
examples/send-donation/collections/my-actions/: Cargo.toml
examples/send-donation/collections/my-actions/src/: lib.rs
examples/send-donation/tests/: my-actions.ts  utils.ts
examples/standalone-shuttle/: Cargo.toml  README.md  actions.json
examples/standalone-shuttle/src/: lib.rs  main.rs
examples/standalone-tokio/: Cargo.toml  README.md  Znap.toml
examples/standalone-tokio/src/: lib.rs  main.rs
examples/workspace/: Cargo.toml  README.md  Znap.toml
examples/workspace/collections/my-actions/: Cargo.toml
examples/workspace/collections/my-actions/src/: lib.rs
examples/workspace/tests/: my-actions.ts
examples/znap-hats/: README.md
examples/znap-hats/app/: LICENSE  README.md  nx.json  package.json  tsconfig.base.json
examples/znap-hats/app/web/: project.json
examples/znap-hats/app/web/app/: actions.json  layout.tsx  manifest.json
examples/znap-hats/app/web/app/account/: page.tsx
examples/znap-hats/app/web/app/api/: data.json
examples/znap-hats/app/web/app/cars/: page.tsx
examples/znap-hats/app/web/app/hats/: page.tsx
examples/znap-hats/app/web/utils/: cars.ts  hat.ts
examples/znap-hats/collections/my-actions/: Cargo.toml
examples/znap-hats/collections/my-actions/src/: car_api.rs  error.rs  hat_api.rs  lib.rs
lang/: Cargo.toml
lang/attribute/collection/: Cargo.toml
lang/attribute/collection/src/: lib.rs
lang/attribute/query/: Cargo.toml
lang/derive/action/: Cargo.toml
lang/derive/action/src/: lib.rs
lang/derive/error-code/: Cargo.toml
lang/derive/error-code/src/: lib.rs
lang/src/: lib.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/src/codegen/: mod.rs
lang/syn/src/codegen/action/: to_metadata.rs
lang/syn/src/codegen/collection/: common.rs  create_transaction.rs  handle_get.rs  handle_post.rs  mod.rs
lang/syn/src/codegen/error_code/: common.rs  mod.rs  name.rs
lang/syn/src/codegen/query/: mod.rs
lang/syn/src/parser/collection/: actions.rs  common.rs  mod.rs
lang/syn/src/parser/error_code/: error.rs  mod.rs
my-actions/: Cargo.toml
my-actions/src/: lib.rs
src/: error.rs  expected-expanded.rs  expected-source.rs  lib.rs  main.rs
tests/custom-get/: Cargo.toml  README.md  Znap.toml
tests/custom-get/collections/actions/src/: lib.rs
tests/custom-get/tests/: actions.ts
tests/dynamic-metadata/: README.md  package-lock.json  package.json
tests/dynamic-metadata/collections/actions/: Cargo.toml
tests/dynamic-metadata/collections/actions/src/: lib.rs
tests/dynamic-metadata/tests/: actions.ts
tests/paths/: Cargo.toml  Znap.toml
tests/paths/collections/paths/: Cargo.toml
tests/paths/collections/paths/src/: lib.rs
tests/paths/collections/prefix/: Cargo.toml
tests/paths/collections/prefix/src/: lib.rs
tests/paths/tests/: paths.ts  prefix.ts
tests/send-donation/: Cargo.toml  Znap.toml  actions.json  package-lock.json
tests/send-donation/collections/my-actions/: Cargo.toml
tests/send-donation/collections/my-actions/src/: lib.rs
tests/send-donation/tests/: my-actions.ts
znap/: Cargo.toml  README.md
znap-cli/: Cargo.toml  README.md
znap-cli/src/: lib.rs
znap-cli/src/commands/: build.rs  clean.rs  deploy.rs  init.rs  mod.rs  new.rs  serve.rs  test.rs
znap-cli/src/template/: collection_body.rs  collection_deploy_binary.rs  collection_serve_binary.rs  collection_toml.rs  deploy_api.rs  deploy_binary.rs  deploy_toml.rs  mod.rs  new_collection_body.rs  new_collection_toml.rs  serve_binary.rs  server_api.rs  server_toml.rs
znap-cli/src/utils/: mod.rs
znap-lang/: Cargo.toml  README.md
znap-lang/macros/attribute/collection/: Cargo.toml
znap-lang/macros/attribute/collection/src/: lib.rs
znap-lang/macros/attribute/query/: Cargo.toml
znap-lang/macros/attribute/query/src/: lib.rs
znap-lang/macros/derive/action/: Cargo.toml
znap-lang/macros/derive/action/src/: lib.rs
znap-lang/macros/derive/error-code/: Cargo.toml
znap-lang/macros/derive/error-code/src/: lib.rs
znap-lang/macros/syn/: Cargo.toml
znap-lang/macros/syn/src/: lib.rs  prelude.rs
znap-lang/macros/syn/src/codegen/action/: mod.rs
znap-lang/macros/syn/src/codegen/collection/: handle_get.rs  handle_post.rs
znap-lang/macros/syn/src/codegen/error_code/: display_variant.rs
znap-lang/macros/syn/src/parser/collection/: common.rs
znap-lang/src/: lib.rs
znap-macros/: Cargo.toml  README.md
znap-macros/src/: lib.rs
znap-syn/: Cargo.toml  README.md
znap-syn/src/: common.rs  lib.rs
znap-syn/src/codegen/action/: mod.rs  name.rs  params.rs  path.rs  query.rs  to_metadata.rs
znap-syn/src/codegen/collection/: common.rs  create_metadata.rs  create_transaction.rs  display_routes.rs  handle_get.rs  handle_post.rs  mod.rs  router.rs
znap-syn/src/codegen/collection/entry/: mod.rs
znap-syn/src/codegen/query/: mod.rs
znap-syn/src/parser/: mod.rs
znap-syn/src/parser/action/: attributes.rs  mod.rs  params_attrs.rs  path_attrs.rs  query.rs  query_attrs.rs
znap-syn/src/parser/collection/: action_idents.rs  actions.rs  common.rs  get_action_fns.rs  mod.rs  post_action_fns.rs
znap-syn/src/parser/error_code/: mod.rs
znap-syn/src/parser/query/: mod.rs
znap/src/: env.rs  lib.rs  prelude.rs
(+18 files in other folders)
