[workspace]
members = [ 
    "examples/my-actions", 
    "lang", 
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "cli"
]

[package]
name = "znap"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
my-actions = { path = "./examples/my-actions"}