[workspace]
members = [ 
    "znap-syn",
    "znap-macros",
    "znap", 
    "znap-cli",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.3"

[workspace.dependencies]
# znap specific
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }

# solana
solana-sdk = "1.18.16"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# utilities
heck = "0.5.0"