[workspace]
members = [ 
    "znap-syn",
    "znap-macros",
    "znap", 
    "znap-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.26"

[workspace.dependencies]
# znap specific
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

# solana
solana-sdk = "2.0.1"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# utilities
heck = "0.5.0"
colored = "2.1.0"
console = "0.15.8"
