[package]
name = "znap-cli"
version = "0.1.1"
edition = "2021"
description = "Manage your znap workspaces"
authors = ["Heavy Duty Builders <team@heavyduty.builders>"]
repository = "https://github.com/heavy-duty/znap"
license = "Apache-2.0"

[[bin]]
name = "znap"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
heck = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
tempfile = "3.10.1"
toml = "0.8.14"
