[package]
name = "znap-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
bincode = "1.3.3"
serde = "1.0.203"
solana-sdk = "1.18.16"
znap-attribute-collection = { path = "./attribute/collection" }
znap-attribute-query = { path = "./attribute/query" }
znap-derive-action = { path = "./derive/action" }