[package]
name = "znap-cli"
version.workspace = true
edition = "2021"
description = "Manage your znap workspaces"
authors = ["Heavy Duty Builders <team@heavyduty.builders>"]
repository = "https://github.com/heavy-duty/znap"
license = "Apache-2.0"

[[bin]]
name = "znap"
path = "src/bin/main.rs"

[dependencies]
# workspace deps
heck = { workspace = true }
serde = { workspace = true }

# crate specific
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
tempfile = "3.10.1"
toml = "0.8.14"
colored = "2.1.0"