[package]
name = "znap-cli"
version.workspace = true
edition = "2021"
description = "Manage your znap workspaces"
authors = ["Heavy Duty Builders <team@heavyduty.builders>"]
repository = "https://github.com/heavy-duty/znap"
license = "Apache-2.0"

[[bin]]
name = "znap"
path = "src/bin/main.rs"

[dependencies]
# workspace deps
heck.workspace = true
toml.workspace = true
serde.workspace = true
colored.workspace = true
console.workspace = true
solana-sdk.workspace = true

# crate specific
anyhow = "1.0.86"
znap-common = { package = "common", path = "../common" }
clap = { version = "4.5.7", features = ["derive"] }
shellexpand = "3.1.0"
reqwest = { version = "0.12.5", default_features = false, features = ["blocking", "json"] }
