[package]
name = "znap-macros"
version.workspace = true
edition = "2021"
authors = ["Heavy Duty Builders <team@heavyduty.builders>"]
repository = "https://github.com/heavy-duty/znap"
license = "Apache-2.0"
description = "Collection of macros to build znap collections"

[dependencies]
# workspace deps
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

# local
znap-syn = { path = "../znap-syn", version = "0.1.21" }

[lib]
proc-macro = true