[package]
name = "znap-syn"
version.workspace = true
edition = "2021"
authors = ["Heavy Duty Builders <team@heavyduty.builders>"]
repository = "https://github.com/heavy-duty/znap"
license = "Apache-2.0"
description = "Collection of utilities for parsing and code generation that power znap-macros"

[dependencies]
# workspace deps
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
heck = { workspace = true }
colored = { workspace = true }

# crate specific
deluxe = { version = "0.5.0", features = ["full"] }
anyhow = "1.0.86"

