[package]
name = "znap"
version.workspace = true
edition = "2021"
authors = ["Heavy Duty Builders <team@heavyduty.builders>"]
repository = "https://github.com/heavy-duty/znap"
license = "Apache-2.0"
description = "Coming soon"

[dependencies]
# workspace deps
axum = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }

# crate specific
base64 = "0.22.1"
bincode = "1.3.3"

# local
znap-macros = { path = "../znap-macros", version = "0.1.3" }