[package]
name = "my-actions"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
tokio = { version = "1", features = ["full"] }
# local
znap-lang = { path = "../../znap-lang" }
