[package]
name = "my-actions"
version.workspace = true
edition = "2021"

[dependencies]
# workspace dep
axum = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }

# crate specific
spl-associated-token-account = "3.0.2"
spl-token = "4.0.1"
tokio = { version = "1", features = ["full"] }

# local
znap = { path = "../../znap", version = "0.1.1" }

