[package]
name = "my-znap-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.203"
solana-sdk = "1.18.16"
spl-associated-token-account = "3.0.2"
spl-token = "4.0.1"
tokio = { version = "1", features = ["full"] }
znap = { path = "../../znap" }

[workspace]
members = []
resolver = "2"